# WorkHunter

./: .flake8  .pre-commit-config.yaml  Dockerfile  README.md  config.py  docker-compose.yaml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2024_01_05_1638-d95a6f1bf756_create_tables.py
src/: core.py  main.py
src/api/: api.py
src/api/endpoints/: __init__.py  main.py  main_page.py  worker.py
src/auth/: auth.py  database.py  manager.py  schemas.py
src/database/: __init__.py  database.py  models.py  schemas.py
src/database/queries/: orm.py
src/routers/: routers.py
src/routers/worker/: routers.py
src/tasks/: tasks.py
