[tool.poetry]
name = "WorkHunter"
version = "0.1.0"
description = ""
authors = ["oogway93 <marklem.coding.com>"]

[tool.poetry.dependencies]
python = "^3.11"
SQLAlchemy = "^2.0.23"
flake8 = "^6.1.0"
python-dotenv = "^1.0.0"
asyncpg = "^0.29.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
